<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rmiya.com.practicacal.MainActivity">

    <VideoView
        android:layout_marginTop="@dimen/mainAc_MarginVideo"
        android:layout_gravity="center"
        android:id="@+id/videoview"
        android:layout_width="380dp"
        android:layout_height="200dp"
        />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pictureCard3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="8dp"
        android:layout_margin="10dp"
        card_view:cardUseCompatPadding="true"
        >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_image_card"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:background="@drawable/pizaa"
                />

        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="329dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_nombre"
                    android:textSize="@dimen/size_card"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_card"
                    android:textSize="@dimen/text_dime"
                    tools:ignore="SpUsage" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_pre"
                    android:textSize="@dimen/text_dime"
                    android:textColor="@android:color/holo_orange_dark"
                    tools:ignore="SpUsage" />

            </LinearLayout>



        </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btnSave"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/dely"
        android:background="#01DFA5"
        android:textColor="@android:color/background_light"
        android:drawableStart="@drawable/ic_local_pizza_black_24dp"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:shadowColor="@android:color/background_dark"
        tools:ignore="RtlSymmetry"
        android:onClick="enviar"/>





</LinearLayout>
